2008-09-04  Kenta Murata  <mrkn@mrkn.jp>

	* spec/measure_spec.rb: modified to avoid warnings ``warning:
	parenthesize argument(s) for future version'' in 1.8.6.

	* lib/measure/length.rb: add some physical length units.

	* lib/measure/length.rb: enclose unit definitions by ``class
	Measure / end'' syntax.

	* lib/measure/support.rb (MeasureSupport#method_missing): replace
	Measure.defined? Measure.has_unit?.

	* lib/measure.rb (def_unit, def_alias, def_conversion): new
	aliases for short definition form (merged changed by walf443).

2008-08-24  Kenta Murata  <mrkn@mrkn.jp>

	* Rakefile, lib/measure.rb, spec/measure_spec.rb: merge the
	changes by walf443 for fixing warnings "warning: parenthesize
	argument(s) for future version" in 1.8.6.

	* spec/measure_spec.rb: some specs are relocated and modified appropriately.

	* spec/measure_spec.rb: replace compatible to direct_compatible.

	* .gitignore: add doc/rdoc.

	* TODO: rdocnize and add some items.

	* COPYING, COPYING.LIB: rdocnize.

	* spec/measure_spec.rb: s/cummutative/commutative/g.

	* Rakefile (rdoc): modify output directory.

	* lib/measure.rb: some documentation comments are written.
	(Measure.defined?): it is removed.
	(Measure.resolve_alias): it now raise InvalidUnitError if the
	given unit is invalid.
	(Measure.compatible?): it is renamed to more intuitively name
	`Measure.direct_compatible?', and the original is removed now.
	(Measure.num_units): it now returns the number of both defined
	units and aliases.
	(Measure.define_unit): it method returns Measure class if
	succeeded.
	(Measure.define_conversion, Measure.neighbors, Measure#convert):
	it now supports conversions by Proc objects.
	(Measure.undefine_unit): it is a new method to undefine an unit.
	(Measure.find_multi_hop_conversion): it is renamed to more
	intuitively name `Measure.find_conversion_route', and the original
	is now an alias.
	(Measure#*, Measure#/): it now supports operation with values with
	unit `1'.