@@ -1,3 +1,8 @@
+2009-03-10  Kenta Murata  <mrkn@mrkn.jp>
+
+	* lib/measure/support.rb (Measure): rename with_short_form to
+	short_form and add enable_ and disable_short_form methods.
+
 2008-09-04  Kenta Murata  <mrkn@mrkn.jp>
 
 	* spec/measure_spec.rb: modified to avoid warnings ``warning:
